--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ fastlane/test_output
 #
 # After new code Injection tools there's a generated folder /iOSInjectionProject
 # https://github.com/johnno1962/injectionforxcode
+
+*.xcuserstate
