--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,11 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 *.xcuserstate
+
+本地推送通知/.DS_Store
+
+本地推送通知/.DS_Store
+
+本地推送通知/.DS_Store
+
+本地推送通知/.DS_Store
